--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -71,7 +71,7 @@
     <h2>Estilos de Parágrafo</h2>
     <p>	Os estilos de parágrafo incluem listas ordenadas e não ordenadas, espaçamentos e tabulações, alinhamento, bordas etc.:</p>
 
-  <div style="display: grid; grid-template-columns: repeat(auto-fill);">
+  <div style="display: grid; grid-template-columns: repeat(auto-fillmin(200px));">
   <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
     <pre style="text-align: left; font-weight: bold; font-size: larger;">
       Este é um
@@ -97,7 +97,7 @@
 
 <br>
 
-<div style="display: grid; grid-template-columns: repeat(auto-fill);">
+<div style="display: grid; grid-template-columns: repeat(auto-fill, min(200px));">
   <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
     <pre style="font-weight: bold; font-size: larger;">
       • Esta é
