--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -136,6 +136,37 @@
 </div>
 
 
+
+<p>	Após terminar de digitar todo o texto inicie a formatação. Abaixo temos as duas barras de formatação, de caractere e de parágrafo, na dúvida é possível parar o mouse sobre um ícone e esperar que seu nome apareça no cursor:</p>
+
+<img src="msword2.png">
+
+  <h2>Fonte</h2>
+  <p>	Antes de tudo, selecione todo o texto e aplique uma fonte Garamond, tamanho 11.</p>
+  
+  <h2>Estilos de Caractere e de Parágrafo</h2>
+  <p>	Selecione as partes que aplicará o estilo negrito clicando e arrastando, faça o mesmo para os trechos em itálico e o mesmo para aplicar o alinhamento, que no caso do corpo do texto é justificado, e o rodapé com a fonte é alinhado à direita.</p>
+  
+  <h2>Tabulação</h2>
+  <p>	Note que cada parágrafo se inicia com um espaço na primeira linha chamado de tabulação, para inseri-lo basta posicionar o mouse antes da primeira letra e apertar a tecla TAB.</p>
+  
+  <h2>Lista com marcadores</h2>
+  <p>	Note ainda que no meio do texto temos dois parágrafos em lista não ordenada, para formatá-los, selecione-os e clique em Marcadores, a primeira opção da Barra de Estilo de Parágrafo.</p>
+  
+  <h2>Títulos</h2>
+  <p>	Por último, selecione o título, e na Barra de Estilos, selecione Titulo 1.</p>
+  
+  
+  
+  <p>	Em seguida altere a fonte para Garamond 14 negrito. </p>
+  
+  <p>	Pareceu estranho aplicar um estilo em seguida alterá-lo? O que fizemos antes é apenas semântico, pois aplicamos um nível hierárquico ao título de forma que depois poderemos construir um sumário. Por exemplo, o Título 2 se torna o subtítulo do Título 1, isso define a posição que aparecerão no sumário quando o inserirmos.</p>
+  
+  <h2>Quebra de Página</h2>
+  <p>	Para prosseguir com nosso exercício iremos escrever mais duas partes para o nosso artigo, cada parte estará em uma página diferente, e para isso precisamos adicionar uma quebra de página.</p>
+  <p>	Uma quebra de página é inserida ao segurarmos a tecla Control e pressionarmos Enter, isso faz com que o próximo parágrafo se inicie na página seguinte. É possível ainda inserir uma quebra de página pelo menu Inserir. Agora digite o texto abaixo:</p>
+
+
 <!-- #endregion -->
 
 
