--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -156,7 +156,7 @@
   <h2>Títulos</h2>
   <p>	Por último, selecione o título, e na Barra de Estilos, selecione Titulo 1.</p>
   
-  
+  <img src="msword3.png">
   
   <p>	Em seguida altere a fonte para Garamond 14 negrito. </p>
   
@@ -165,6 +165,111 @@
   <h2>Quebra de Página</h2>
   <p>	Para prosseguir com nosso exercício iremos escrever mais duas partes para o nosso artigo, cada parte estará em uma página diferente, e para isso precisamos adicionar uma quebra de página.</p>
   <p>	Uma quebra de página é inserida ao segurarmos a tecla Control e pressionarmos Enter, isso faz com que o próximo parágrafo se inicie na página seguinte. É possível ainda inserir uma quebra de página pelo menu Inserir. Agora digite o texto abaixo:</p>
+
+
+<div style="background-color: black; margin: 15px; padding: 15px;">
+  <h3>Como funciona a Inteligência Artificial?</h3>
+  <p>	Você já deve ter ouvido falar muitas vezes em hardware e software, certo? Mas você sabe o que esses termos significam?</p>
+  <p>	Enquanto o hardware é a parte física de uma máquina, o software é a parte lógica – ou o “cérebro”. Onde você diria, portanto, que está a inteligência artificial? No software, é claro.</p>
+  <p>	Por isso, se você quiser saber como um carro pode andar sozinho, por exemplo, esqueça o hardware, pois o segredo está no programa que orienta seus movimentos.</p>
+  <p>	Portanto, não é possível explicar como funciona a inteligência artificial sem falar na ciência da computação.</p>
+  <p>	Essa ciência estuda técnicas e métodos de processamento de dados, sendo o desenvolvimento de algoritmos uma questão central nela.</p>
+  <p>	Os algoritmos são uma sequência de instruções que orientam o funcionamento de um software – que, por sua vez, pode resultar em movimentos de um hardware.</p>
+  <p>	E a inteligência artificial, onde entra nisso? Na sua origem, o algoritmo é muito simples, como em uma receita de bolo.</p>
+  <p>	Hoje, a lógica dos algoritmos é usada para criar regras extremamente complexas, para que possam resolver problemas sozinhos.</p>
+  <p>	Mesmo quando há dois ou mais caminhos a seguir em uma tarefa. Para isso, é necessário combinar algoritmos com dados.</p>
+  <p>	Voltando ao exemplo do bolo, uma pessoa o retira do forno quando observa que ele está pronto ou fazendo o teste do garfo.</p>
+  <p>	Uma máquina de fazer bolos com inteligência artificial poderia ter algum tipo de sensor que identificasse a textura do bolo.</p>
+  <p>	O algoritmo trabalharia com duas hipóteses e uma resposta para cada uma:</p>
+  <p></p>
+  <p>1. Se a textura ainda não for a ideal, o bolo segue no forno.</p>
+  <p>2. Quando o bolo estiver pronto, é retirado e o forno desligado.</p>
+  <p>	Claro que esse é um exemplo muito primário diante das possibilidades.</p>
+  <p>	Há máquinas que realizam tarefas muitas vezes mais complexas, resolvendo problemas com milhares de variáveis, em vez de apenas uma.</p>
+  <p>	Mas elas vão sempre funcionar dessa maneira: a partir de uma programação prévia, um código que considera essas variáveis, processa os dados e determina o que fazer em cada situação.</p>
+
+  <h3>Qual é o principal objetivo da Inteligência Artificial?</h3>
+  <p>	Entre os inúmeros objetivos da inteligência artificial, o principal é desenvolver tecnologias que tenham a capacidade de simular as ações humanas e de pensar de maneira lógica.</p>
+  <p>	E com isso, criar soluções para os mais variados aspectos da nossa vida.</p>
+  <p>	A modernização das empresas é um dos resultados práticos mais evidentes do uso destas tecnologias.</p>
+  <p><i>Fonte: FIA – Fundação Instituto de Administração</i></p>
+</div>
+
+
+
+
+<p>Após terminar de digitar todo o texto, formate-o conforme ele foi apresentado.</p>
+  <h2>Lista Numerada</h2>
+  <p>	Note que no meio do texto temos outro tipo de lista, uma lista ordenada com numeração, ou, uma lista numerada. Para isso basta selecionar Numeração em vez de Marcadores como fizemos no exercício anterior.
+  <h2>Estilo de Título</h2>
+  <p>	Podemos deixar a formatação dos títulos ainda mais fácil. Clique no título do primeiro texto que você fez anteriormente (o que já estava formatado) e clique com o botão direito do mouse sobre o estilo Título 1 (que você aplicou ao texto) na Barra de Estilos do menu Página Inicial. Selecione a opção Atualizar Título 1 para corresponder à seleção, você verá que ele se modificará, isso porque apesar de manter a hierarquia semântica do sumário, ele contém agora a formatação que desejamos. Agora basta aplicá-lo aos nossos títulos.
+  
+  <h2>Inserir Imagens</h2>
+  <p>	Para inserir a imagem, entre no site pixabay.com e digite Inteligência Artificial, escolha duas imagens que gostar e faça o download. Em seguida crie uma nova linha no texto entre os títulos e os parágrafos para inserir a imagem e, com o cursor posicionado no local, clique no menu Inserir na Barra de Menus, clique em Imagens e selecione Este Dispositivo procure pela imagem e clique em Inserir.
+  <h2>Formatar imagens inseridas</h2>
+  <p>	Faça o mesmo processo com a segunda imagem. 
+  <p>	Para definir as duas imagens com o mesmo tamanho, clique com o botão direito do mouse sobre a imagem e selecione Tamanho e Posição e defina a largura como 10,0cm, faça o mesmo com as duas imagens.
+  
+  <h2>Sumário</h2>
+  <p>	Nosso próximo passo é criar um sumário com os conteúdos dos títulos. Para isso clique antes da primeira letra no início do arquivo, clique no menu Inserir e selecione Página em Branco. Com o cursor posicionado no começo da página, clique no menu Referências, clique em Sumário e selecione um dos dois tipos de sumário automático. Sempre que alterarmos ou excluirmos títulos ou inserirmos novos, devemos voltar a esse menu e selecionar Atualizar Sumário.
+  <p>	Caso o sumário não tenha adicionado automaticamente os títulos, ainda no menu Referências você pode selecionar os títulos e clicar em Adicionar Texto, e definir o nível hierárquico que aparecerá no sumário, pode ser necessário formatar novamente os títulos.
+  
+  <h2>Cabeçalho e Rodapé</h2>
+  <p>	Outro recurso que vamos inserir em nosso documento é Cabeçalho e Rodapé. Para isso, clique no menu Inserir e procure por Cabeçalho e clique, selecione Em branco. No cabeçalho do documento, digite: Inteligência Artificial, o que é, como funciona e objetivos. Formate o cabeçalho como Garamond 10 negrito centralizado.
+  <p>	Para inserir o Rodapé o processo é o mesmo, selecione Rodapé, Em Branco. A diferença é que ao invés de digitarmos algo, inseriremos um elemento automático.
+  <p>	Na Faixa de Opções procure por “Número de Página” e clique, selecione “Fim da página” e escolha “Numero sem formatação 2”, para que fique centralizado, em seguida selecione o número de página e formate-o como Garamond 14 negrito.
+  
+  <h2>Espaçamentos</h2>
+  <p>	Vamos agora configurar os espaçamentos entre linhas e parágrafos, provavelmente seu texto esteja com os espaçamentos maiores que os da apostila.
+  <p>	Selecione todo o texto do primeiro parágrafo. Você pode clicar e arrastar ou pressionar Control+T.
+  <p>	Na Barra de Estilo de Parágrafo, clique na setinha que aponta para baixo, bem no canto, será aberta a caixa de diálogo Recuos e Espaçamento. Na primeira guia ela tem três conjuntos, Geral, Recuo e Espaçamento, o que nos interessa é o terceiro conjunto, espaçamentos. 
+  <p>	Em “Antes”, digite 0, em “Depois” digite 0, e em “Espaçamento entre linhas”, selecione Simples.
+  <p>	Certamente os títulos encostaram nos parágrafos. Basta que você selecione um dos títulos do documento e formate-o novamente, em “Espaçamento entre Linha e Parágrafo”, na Barra de Estilo de Parágrafo, selecione 1,5. Em seguida atualize o estilo de título na Barra de Estilos. Se tiver dúvidas nesta etapa, peça ajuda ao seu instrutor.
+  
+  <h2>Bordas e Sombreamento</h2>
+  <p>	Está quase pronto, vamos agora configurar uma cor de fundo para os parágrafos aplicando um estilo de Bordas e Sombreamento.
+  <p>	Selecione todo o texto do documento.
+  <p>	Na Barra de Estilo de Parágrafo, procure por Bordas e clique na seta ao lado, selecione Bordas e Sombreamento, lá no final.
+  <p>	Na caixa que se abrirá, clique na terceira guia, Sombreamento, em Preenchimento, escolha uma cor clara de sua preferência. Veja que se quiser você pode aplicar uma Borda de Página também, sinta-se à vontade.
+  <p>	Terminando tudo, clique em Ok. Salve seu documento.
+  
+  <h2>Layout de Página</h2>
+  <p>	Vamos agora a uma das etapas fundamentais que é configurar a página, pois não adianta nada fazer um belo documento que no final não é funcional para imprimir ou exportar.
+  <p>	Clique no menu Layout.
+  <p>	Em Margens, selecione Moderada, o que aplica recuos laterais de 1,91cm e superior e inferior de 2,54cm. Você pode configurar margens independentes de acordo com o tipo de impressão que fará com o documento.
+  <p>	A orientação será mantida como Retrato, o que significa que a o conteúdo é impresso com a página “em pé”.
+  <p>	Em tamanho selecione A5, que equivale à metade de uma folha de papel comum, o tamanho A5 é muito usado em livros.
+  
+  <h2>Revisão Ortográfica</h2>
+  <p>	Quando terminamos um documento podemos passar um Corretor Ortográfico para verificar erros de digitação e de concordância, geralmente o Word aponta erros de digitação com marcas vermelhas e de concordância com marcas azuis, enquanto digitamos. Mas é possível depois de tudo pronto dar um tratamento geral nos erros do arquivo.
+  <p>	Clique no menu Revisão. Selecione Ortografia e Gramática. Podemos corrigir ou ignorar uma sugestão do corretor.
+  
+  <h2>Salvar e Salvar como</h2>
+  <p>	Para salvar um arquivo basta pressionar Alt+1. Caso o arquivo esteja salvo previamente será atualizado, senão será solicitado para salvar em um diretório no computador. Para salvar o documento como um novo, selecionamos “Salvar Como”. Na caixa de diálogo de Salvar Como, você pode ver que podemos salvar o arquivo em vários formatos diferentes, como por exemplo .rtf, que é o formato Rich Text, utilizado pelo Wordpad e .txt que é texto sem formatação, utilizado pelo Bloco de Notas.
+  <p>	É claro que salvar em formatos não compatíveis pode resultar em perda de dados. Por exemplo, salvar seu documento agora como .txt fará com que o novo arquivo perca toda a formatação feita, mas o arquivo original permanece desde que tenha sido salvo antes com a opção Salvar.
+  <p>	Vamos salvar num formato diferente?
+  <h2>Exportar para PDF</h2>
+  1. <p>Primeiro, aperte Control+S para atualizar o arquivo original.
+  2. <p>Agora clique no menu Arquivo, e selecione Salvar Como. Clique em Procurar e navegue até sua pasta.
+  3. <p>Em Tipo, selecione PDF. E clique em Salvar.
+  <p class="notas">Dica: Pegue o hábito de utilizá-lo com frequência para que o arquivo esteja sempre atualizado.</p>
+  <p>	Feche o Word e abra sua pasta, encontre o arquivo Inteligência Artificial.pdf e abra-o. Está finalizado nosso primeiro exercício.
+  <h2>Recapitulando</h2>
+  <p>	O Word é um editor de textos completo com diversos recursos de layout e formatação que podemos utilizar em nossos documentos, e incluem:
+  
+
+  <li>Formatação de Caracteres.</li>
+  <li>Formatação de Parágrafos.</li>
+  <li>Formatação estética e semântica de títulos.</li>
+  <li>Sumário ou tabela de conteúdo.</li>
+  <li>Inserção de imagens e outros formatos de arquivos.</li>
+  <li>Cabeçalho, rodapé e numeração de página.</li>
+  <li>Margens e colunas.</li>
+  <li>Revisão de ortografia e gramática.</li>
+  <li>Dicionários de tradução e de sinônimos.</li>
+  <li>Exportação em diferentes formatos.</li>
+  <li>Entre outros recursos.</li>
+  
 
 
 <!-- #endregion -->
