--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -169,6 +169,7 @@
 
 <div style="background-color: black; margin: 15px; padding: 15px;">
   <h3>Como funciona a Inteligência Artificial?</h3>
+  <img src="msword4.png" alt="">
   <p>	Você já deve ter ouvido falar muitas vezes em hardware e software, certo? Mas você sabe o que esses termos significam?</p>
   <p>	Enquanto o hardware é a parte física de uma máquina, o software é a parte lógica – ou o “cérebro”. Onde você diria, portanto, que está a inteligência artificial? No software, é claro.</p>
   <p>	Por isso, se você quiser saber como um carro pode andar sozinho, por exemplo, esqueça o hardware, pois o segredo está no programa que orienta seus movimentos.</p>
