--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -34,7 +34,7 @@
 
 <h1>Microsoft Word</h1>
 <p>	Com alguns recursos a mais, o Word possui as mesmas características do Wordpad na hora de formatar caracteres e parágrafos. Neste módulo abordaremos apenas os conceitos básicos de formatação de texto para compreender os recursos fundamentais do Word. Para um entendimento mais a fundo de tipografia sugiro que faça o Curso Completo de Design Gráfico em:</p>
-<a class="js-button">www.jorgesouza.com.br</a>
+<a class="js-button" href="https://www.jorgesouza.com.br/" target="_blank">www.jorgesouza.com.br</a>
 <img src="msword.png">  
 
 <p>	Todos os aplicativos do Office possuem um layout básico que é composto pelo espaço de trabalho no centro da tela, que pode ser a página, a planilha ou o slide em que estamos trabalhando. Acima do espaço de trabalho temos a Barra de Menus e a Faixa de Opções, com as opções desses menus. Abaixo do espaço de trabalho temos a Barra de Status e ocasionalmente guias e/ou barra de rolagem acima da Barra de Status. Na Barra de Status temos o controle deslizante do zoom, mas é possível controlar o zoom utilizando o Control e a scroll do mouse.</p>
@@ -50,10 +50,10 @@
     <h2>Tamanho da Fonte</h2>
     <p>	O tamanho da fonte é medido em pontos. Em um único texto, tamanhos maiores podem ser utilizados no título e menores no corpo, o tamanho do texto pode ainda variar de acordo com o local onde aparecerá.</p>
     
-    <p>Este texto tem tamanho 10</p>
-    <p>Este texto tem tamanho 12</p>
-    <p>Este texto tem tamanho 14</p>
-    <p>Este texto tem tamanho 16</p>
+    <p style="font-size: 12pt;">Este texto tem tamanho 12</p>
+    <p style="font-size: 16pt;">Este texto tem tamanho 16</p>
+    <p style="font-size: 24pt;">Este texto tem tamanho 24</p>
+    <p style="font-size: 32pt;">Este texto tem tamanho 32</p>
     
     <h2>Estilos de Caractere</h2>
     <p>	Os estilos de caractere incluem negrito, itálico, sublinhado, tachado, subscrito e sobrescrito:</p>
@@ -71,47 +71,43 @@
     <h2>Estilos de Parágrafo</h2>
     <p>	Os estilos de parágrafo incluem listas ordenadas e não ordenadas, espaçamentos e tabulações, alinhamento, bordas etc.:</p>
 
-  <div style="display: grid; grid-template-columns: repeat(auto-fillmin(200px));">
-  <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
+  <div style="padding: 25px; background-color: #ddd;">
     <pre style="text-align: left; font-weight: bold; font-size: larger;">
       Este é um
       exemplo de parágrafo
       alinhado à esquerda.
     </pre>
   </div>
-  <div style="grid-column: 2; padding: 25px; background-color: #aaa;">
+  <div style="padding: 25px; background-color: #aaa;">
     <pre style="text-align: center; font-weight: bold; font-size: larger;">
       Este é um
       exemplo de parágrafo
       centralizado.
     </pre>
   </div>
-  <div style="grid-column: 3; padding: 25px; background-color: #ddd;">
+  <div style="padding: 25px; background-color: #ddd;">
     <pre style="text-align: right; font-weight: bold; font-size: larger;">
       Este é um
       exemplo de parágrafo
       alinhado à direita.
     </pre>
   </div>
-</div>
 
 <br>
 
-<div style="display: grid; grid-template-columns: repeat(auto-fill, min(200px));">
-  <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
-    <pre style="font-weight: bold; font-size: larger;">
-      • Esta é
-      • uma lista
-      • não ordenada
-    </pre>
-  </div>
-  <div style="grid-column: 3; padding: 25px; background-color: #ddd;">
-    <pre style="font-weight: bold; font-size: larger;">
-      1. Esta é
-      2. uma lista
-      3. ordenada
-    </pre>
-  </div>
+<div style="padding: 25px; background-color: #AAA;">
+  <pre style="font-weight: bold; font-size: larger;">
+    • Esta é
+    • uma lista
+    • não ordenada
+  </pre>
+</div>
+<div style="padding: 25px; background-color: #ddd;">
+  <pre style="font-weight: bold; font-size: larger;">
+    1. Esta é
+    2. uma lista
+    3. ordenada
+  </pre>
 </div>
 
 <p class="notas">O ícone de pincel na barra da área de transferência (Pincel de Formatação) serve para copiar o estilo de formatação de um texto para outro. Está presente em praticamente todos os aplicativos do Office. É possível também copiar o estilo de formatação com o atalho Ctrl+Shift+C e colar em outro texto com o atalho Ctrl+Shift+V.</p>
@@ -255,6 +251,8 @@
   3. <p>Em Tipo, selecione PDF. E clique em Salvar.
   <p class="notas">Dica: Pegue o hábito de utilizá-lo com frequência para que o arquivo esteja sempre atualizado.</p>
   <p>	Feche o Word e abra sua pasta, encontre o arquivo Inteligência Artificial.pdf e abra-o. Está finalizado nosso primeiro exercício.
+  
+  
   <h2>Recapitulando</h2>
   <p>	O Word é um editor de textos completo com diversos recursos de layout e formatação que podemos utilizar em nossos documentos, e incluem:
 
@@ -270,6 +268,47 @@
   <li>Exportação em diferentes formatos.</li>
   <li>Entre outros recursos.</li>
   
+<hr>
+
+<img src="exercicio.png">
+
+<p>Que tal criarmos mais um arquivo PDF?</p>
+<p>	Para nosso exercício faremos o TCC do curso de Química da “Universidade JorgeCAD”, e nosso tema será o Oxigênio!</p>
+<p>	Para tal, em um novo arquivo Word escreva o texto abaixo e ao final formate-o e insira uma imagem para deixá-lo o mais parecido possível:</p>
+
+<div style="background-color: black; margin: 15px; padding: 15px;">
+<h3>Oxigênio</h3>
+<img src="msword5.png">
+<p>	O oxigênio é um elemento químico da família dos calcogênios que forma os gases ozônio e oxigênio, fundamentais para o ser humano.
+
+<p>	O Oxigênio é um elemento químico que pertence ao segundo período da família VIA (calcogênios) da Tabela Periódica. Trata-se do elemento mais abundante na superfície terrestre. Todos sabemos da importância vital desse elemento, já que ele forma o gás oxigênio (gás presente no ar atmosférico que é fundamental para a sobrevivência de diversos seres).
+
+<h3>Características atômicas</h3>
+<p>	O oxigênio é composto por átomos que apresentam número atômico (Z) igual a 8 e massa atômica igual a 16. Sendo assim, seus átomos apresentam:
+<li>8 prótons no interior do núcleo;</li>
+<li>8 elétrons nos orbitais;</li>
+<li>Uma média de 8 nêutrons no núcleo do átomo.</li>
+
+<h3>História do Oxigênio</h3>
+<p>	O chinês Mao-Khoa, no século VIII, e Leonardo Da Vinci, no século XV, chegaram à conclusão de que o ar não era um elemento. Para Mao-Khoa, o ar era composto por duas substâncias: ar completo e ar incompleto. Já Da Vinci percebeu que havia uma relação entre o fenômeno da combustão e o ar que respiramos.
+
+<p>	Em 1771 e 1774, dois cientistas realizaram experimentos diferentes, mas alcançaram o mesmo resultado. Em 1771, Scheele produziu gás oxigênio a partir do aquecimento individual de substâncias diferentes, como nitrato de potássio e o óxido de mercúrio. Já em 1774, Priestley aqueceu o óxido de mercúrio II (HgO) e produziu o gás oxigênio (O2).
+
+<h3>Características físicas do Oxigênio</h3>
+<li>Apresenta alta eletronegatividade (capacidade de atrair elétrons de outro átomo);</li>
+<li>Apresenta raio atômico pequeno;</li>
+<li>Apresenta elevada energia de ionização (é necessária muita energia para retirar um elétron do seu átomo);</li>
+<li>É um ametal e, por isso, apresenta tendência de ganhar elétrons (formar ânion);</li>
+<li>Deve receber dois elétrons para que seu átomo se torne estável, segundo a teoria do octeto, já que apresenta seis elétrons na camada de valência.</li>
+<p><i>Fonte Brasil Escola</i></p>
+</div>
+
+<h2>Observações do exercício</h2>
+<p>1. Para pesquisar a imagem, entre em sites como Freepik, Pixabay, ou Depositphotos e baixe fotos livres de direitos autorais. Pesquise por “O2”.</p>
+<p>2. Coloque seu nome completo como cabeçalho centralizado e o número da página como rodapé centralizado.</p>
+<p>3. Defina as margens como: superior e inferior 2,5cm e laterais 2cm.</p>
+<p>4. Adicione uma página no início do documento e insira um sumário com todos os títulos.</p>
+<p>5. Exporte o arquivo como .pdf em sua pasta.</p>
 
 
 <!-- #endregion -->
